add note on how to use on windows. add dot-env file and functionality

--- a/postchi/requirements.txt
+++ b/postchi/requirements.txt
@@ -1,2 +1,11 @@
 simple-crypt >
 model_utils
+django
+djangorestframework
+djangorestframework-jwt
+psycopg2
+tweepy
+pillow
+python-dotenv
+pathlib
+django-cors-headers
