post app added.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,161 +1,11 @@
-apturl==0.5.2
-asgiref==2.3.0
-async-timeout==2.0.1
-attrs==17.4.0
-autobahn==18.4.1
-Automat==0.6.0
-beautifulsoup4==4.4.1
-blinker==1.3
-bottle==0.12.13
-bottle-session==0.8
-Brlapi==0.6.4
-captcha==0.2.4
-certifi==2017.7.27.1
-chardet==2.3.0
-checkbox-support==0.22
-click==6.7
-command-not-found==0.3
-constantly==15.1.0
-cryptography==1.2.3
-cssselect==1.0.3
-cycler==0.10.0
-decorator==4.0.11
-defer==1.0.6
-dj-database-url==0.4.2
+simple-crypt==4.1.7
 Django==2.0.4
-django-autoslug==1.9.3
-django-cors-headers==2.4.0
-django-filter==1.1.0
-django-recaptcha==1.3.1
-django-simple-captcha==0.5.5
-django-socket-server==0.0.4
-django-taggit==0.22.2
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
-drf-nested-routers==0.90.2
-EasyProcess==0.2.3
-enum34==1.1.6
-et-xmlfile==1.0.1
-feedparser==5.1.3
-flake8==2.2.4
-Flask==1.0.2
-future==0.16.0
-guacamole==0.9.2
-html5lib==0.999
-httpie==0.9.9
-httplib2==0.9.1
-hyperlink==18.0.0
-idna==2.6
-imageio==2.1.2
-incremental==17.5.0
-inflection==0.2.0
--e git+https://github.com/LevPasha/Instagram-API-python.git@a5a2bff6755ffa8e92b91a91ee3e5d0719a631e0#egg=instagram_api
-ipython==2.4.1
-iso8601==0.1.12
-itsdangerous==0.24
-jdcal==1.4
-Jinja2==2.10
-language-selector==0.1
-louis==2.6.4
-lxml==3.5.0
-Mako==1.0.3
-MarkupSafe==0.23
-matplotlib==2.0.2
-mccabe==0.3
-Mongothon==0.8.0
-moviepy==0.2.3.2
-mpmath==1.0.0
-numpy==1.12.1
-oauthlib==0.7.2
-olefile==0.44
-onboard==1.2.0
-openpyxl==2.5.5
-padme==1.1.1
-pandas==0.20.3
-parsel==1.5.0
-pep8==1.5.7
-pexpect==4.0.1
-pickleDB==0.6.2
-Pillow==4.1.1
-plainbox==0.25
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
-ptyprocess==0.5
-pyasn1==0.1.9
-pycryptodome==3.6.6
-pycups==1.9.73
-pycurl==7.43.0
-pydub==0.18.0
-pyflakes==0.8.1
-Pygments==2.2.0
-pygobject==3.20.0
-PyHamcrest==1.9.0
-PyJWT==1.6.4
-pymongo==3.5.1
-pyparsing==2.0.3
-pyserial==3.4
-python-apt==1.1.0b1
-python-dateutil==2.6.1
-python-debian==0.1.27
-python-decouple==3.1
-python-instagram==1.3.2
-python-speech-features==0.5
-python-systemd==231
-python-telegram-bot==8.0
-pytz==2018.4
-PyVirtualDisplay==0.2.1
-pyxdg==0.25
-PyYAML==3.12
-redis==2.10.6
-reportlab==3.3.0
-requests==2.11.1
-requests-oauthlib==0.4.2
-requests-toolbelt==0.7.0
-schedule==0.4.3
-Schemer==0.2.11
-scikit-learn==0.19.0
-scipy==0.19.0
-screen-resolution-extra==0.0.0
-selenium==3.13.0
-serial==0.0.38
-sessioninstaller==0.0.0
-simple-crypt==4.1.7
-simplegeneric==0.8.1
-simplejson==3.11.1
-six==1.11.0
-sklearn==0.0
-sympy==1.1.1
-system-service==0.3
-testfixtures==5.3.0
-tqdm==4.8.4
 tweepy==3.3.0
-twython==3.6.0
-txaio==2.10.0
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
-Unipath==1.1
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-firefoxbookmarks==0.1
-unity-scope-gdrive==0.7
-unity-scope-manpages==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
-unity-tweak-tool==0.0.7
-urllib3==1.13.1
-usb-creator==0.3.0
-uuid==1.30
-vk-api==9.0
-w3lib==1.19.0
-Werkzeug==0.14.1
-xdiagnose==3.8.4
-xkit==0.0.0
-XlsxWriter==0.7.3
-zope.interface==4.4.3
+Pillow==4.1.1
+python-dotenv
+pathlib
+django-cors-headers==2.4.0
