--- a/postchi/requirements.txt
+++ b/postchi/requirements.txt
@@ -1,11 +1,11 @@
-simple-crypt
-model_utils
-django
-djangorestframework
-djangorestframework-jwt
-psycopg2
-tweepy
-pillow
+simple-crypt==4.1.7
+Django==2.0.4
+djangorestframework==3.7.7
+djangorestframework-jwt==1.11.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+tweepy==3.3.0
+Pillow==4.1.1
 python-dotenv
 pathlib
-django-cors-headers
+django-cors-headers==2.4.0
