--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 simple-crypt==4.1.7
-Django==2.0.4
+Django==2.1.1
+pkg-resources==0.0.0
+pytz==2018.5
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
 psycopg2==2.7.5
